// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag should work with invert 1`] = `
<div>
  <span
    class="jsx-3485934268 "
  >
    success
  </span>
</div>
`;

exports[`Tag should work with types 1`] = `
<div>
  <span
    class="jsx-2465917227 "
  >
    success
  </span>
  <span
    class="jsx-1915979627 "
  >
    secondary
  </span>
  <span
    class="jsx-3420233003 "
  >
    error
  </span>
  <span
    class="jsx-2763296875 "
  >
    dark
  </span>
</div>
`;
